# wam_analysis

./: main.py  pyproject.toml  water_quality_analysis_results_20250727_211758.xlsx  water_quality_analysis_results_20250727_231216.xlsx  전처리_기상정보결합.py  주소변환.ipynb  측정정보분석0.01.ipynb  측정정보분석0.02.ipynb
A.기초정보/: 기상청측정소_stations_all_map.html  도로명주소_좌표변환_결과_오류사업장_1차.xlsx  도로명주소_좌표변환_결과_전국 20250726_160732.xlsx  사업장정보관리_전국전체TMS.xlsx  수질TMS부착정보.dbf  수질TMS부착정보.shp  수질TMS부착정보.shx  수질TMS사업장정보관리_광전제.xlsx  수질TMS사업장정보관리_주소지오류.xlsx  수질측정소정보.dbf  수질측정소정보.shp  수질측정소정보.shx  측정소 정보.xlsx
A.기초정보/KRF_3.0_Yeongsangang/: KRF_ver3_CATCHMENT_영산강수계.dbf  KRF_ver3_CATCHMENT_영산강수계.sbn  KRF_ver3_CATCHMENT_영산강수계.sbx  KRF_ver3_CATCHMENT_영산강수계.shx  KRF_ver3_LINE_영산강수계.sbn  KRF_ver3_LINE_영산강수계.sbx  KRF_ver3_LINE_영산강수계.shp  KRF_ver3_LINE_영산강수계.shx  KRF_ver3_NODE_영산강수계.qix  KRF_ver3_NODE_영산강수계.shp  KRF_ver3_NODE_영산강수계.shx
B.GIS프로젝트/: 1.영섬수계KRF등.qgz  도로명주소_좌표변환_결과.xlsx  도로명주소_좌표변환_결과_20250726_110426.xlsx  도로명주소_좌표변환_결과_20250726_111458.xlsx  도로명주소_좌표변환_결과_20250726_114710_미완.xlsx  도로명주소_좌표변환_결과_20250726_115737_최종완성.xlsx
C.수질측정정보/: 나주측정소_2401-2410월.xlsx  서창교결합자료.csv  서창교측정소_2411-2506월_sample.xlsx  용봉측정소_2401-2410월.xlsx  용봉측정소_2401-2506월_sample.xlsx  용봉측정소_2411-2506월.xlsx  우치측정소_2401-2410월.xlsx  하수처리장정보_기상통합_sample.xlsx
C.수질측정정보/원본/: 나주측정소_2411-2506월.xlsx  서창교측정소_2401-2410월.xlsx  서창교측정소_2411-2506월.xlsx  용봉측정소_2401-2410월.xlsx  우치측정소_2411-2506월.xlsx  지석천측정소_2401-2410월.xlsx  지석천측정소_2411-2506월.xlsx
D.기상정보/: 광주기상대_기상정보_2022년이후-2025년누적_sample.xlsx
