[project]
name = "wam-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
